# AbstractVM

./: .gitignore  CMakeLists.txt
files/: assert.avm
includes/: IOperand.hpp  Operand.hpp  OperandFactory.hpp  Parser.hpp  Util.hpp
targsrc/: OperandFactory.cpp  Parser.cpp  Util.cpp  main.cpp
